--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@eslint/config-array": "^0.19.0",
     "@eslint/object-schema": "^2.1.4",
     "@hookform/resolvers": "^3.3.4",
+    "@radix-ui/colors": "^3.0.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
@@ -61,6 +62,7 @@
     "input-otp": "^1.2.2",
     "lucide-react": "^0.358.0",
     "next-themes": "^0.3.0",
+    "radix-ui": "^1.1.3",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
